# shida

./: .gitignore  README.md  shida.cabal
app/: Main.hs
doc/crackme/: .gitignore  crackme  solve.hs
src/: BitVectorValue.hs  Common.hs  Flattening.hs  Formula.hs  MiniSat.hs  Propositional.hs  Solve.hs
test/: BitVectorValueTest.hs  SolveTest.hs  Spec.hs
