cabal-version: 1.12

name:           shida
version:        0.1.0.0
author:         Florian Märkl
license:        GPL-3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/thestr4ng3r/shida

library
  exposed-modules:
      Common,
      BitVectorValue
      Formula
      Propositional
      Flattening
      Solve
      MiniSat
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5,
      bytestring,
      containers,
      mtl,
      transformers,
      minisat-solver
  default-language: Haskell2010
  ghc-options: -W

executable shida-exe
  main-is: Main.hs
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5,
      shida,
      minisat-solver
  default-language: Haskell2010

test-suite shida-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      BitVectorValueTest
      SolveTest
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5,
      QuickCheck,
      shida,
      containers
  default-language: Haskell2010
